--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 pandas==1.1.5
-scikit-learn~=0.24.1
+torch==1.7.1
 transformers==4.10.0
+pandas==1.1.5
+scikit-learn==0.24.1
+matplotlib==3.3.4
+tqdm==4.51.0
+numpy==1.19.2
+glob2==0.7
